--- a/package.json
+++ b/package.json
@@ -9,10 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.1.0",
+    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.10",
     "expo": "~52.0.46",
+    "expo-barcode-scanner": "^13.0.1",
+    "expo-camera": "~16.0.18",
+    "expo-linear-gradient": "^14.0.2",
     "expo-status-bar": "~2.0.1",
+    "firebase": "^11.6.0",
     "react": "18.3.1",
-    "react-native": "0.76.9"
+    "react-native": "0.76.9",
+    "react-native-toast-message": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
