--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "expo-linear-gradient": "^14.0.2",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.6.0",
+    "metro-react-native-babel-preset": "^0.77.0",
     "react": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-dotenv": "^3.4.11",
     "react-native-toast-message": "^2.3.0"
   },
   "devDependencies": {
