--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-dotenv": "^3.4.11",
-    "react-native-toast-message": "^2.3.0"
+    "react-native-toast-message": "^2.3.0",
+    "expo-notifications": "~0.29.14",
+    "expo-device": "~7.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
