--- a/.github/workflows/expo-publish.yml
+++ b/.github/workflows/expo-publish.yml
@@ -1,4 +1,4 @@
-name: Expo Publish
+name: EAS Update
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  publish:
+  update:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
@@ -20,10 +20,10 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Install Expo CLI
-        run: npm install -g expo-cli
+      - name: Install Expo CLI (modern CLI)
+        run: npm install -g eas-cli
 
-      - name: Publish to Expo
+      - name: Run EAS Update
         env:
           EXPO_ACCESS_TOKEN: ${{ secrets.EXPO_ACCESS_TOKEN }}
-        run: expo publish --non-interactive
+        run: eas update --non-interactive
