--- a/.github/workflows/eas-update.yml
+++ b/.github/workflows/eas-update.yml
@@ -25,6 +25,6 @@ jobs:
 
       - name: Run EAS Update
         env:
-          EXPO_ACCESS_TOKEN: ${{ secrets.EXPO_ACCESS_TOKEN }}
+          EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
         run: |
           eas update --branch main --message "CI auto update from GitHub push" --non-interactive
