--- a/package.json
+++ b/package.json
@@ -16,19 +16,20 @@
     "expo": "~52.0.46",
     "expo-barcode-scanner": "^13.0.1",
     "expo-camera": "~16.0.18",
+    "expo-device": "~7.0.3",
     "expo-linear-gradient": "^14.0.2",
+    "expo-notifications": "~0.29.14",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.6.0",
     "metro-react-native-babel-preset": "^0.77.0",
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-dotenv": "^3.4.11",
-    "react-native-toast-message": "^2.3.0",
-    "expo-notifications": "~0.29.14",
-    "expo-device": "~7.0.3"
+    "react-native-toast-message": "^2.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@babel/plugin-transform-private-methods": "^7.25.9"
   },
   "private": true
 }
