--- a/package.json
+++ b/package.json
@@ -10,20 +10,20 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-community/datetimepicker": "8.3.0",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
-    "expo": "~52.0.46",
+    "expo": "^53.0.0",
     "expo-barcode-scanner": "^13.0.1",
-    "expo-camera": "~16.0.18",
-    "expo-device": "~7.0.3",
-    "expo-linear-gradient": "^14.0.2",
-    "expo-notifications": "~0.29.14",
-    "expo-status-bar": "~2.0.1",
+    "expo-camera": "~16.1.6",
+    "expo-device": "~7.1.4",
+    "expo-linear-gradient": "~14.1.4",
+    "expo-notifications": "~0.31.1",
+    "expo-status-bar": "~2.2.3",
     "firebase": "^11.6.0",
     "metro-react-native-babel-preset": "^0.77.0",
-    "react": "18.3.1",
-    "react-native": "0.76.9",
+    "react": "19.0.0",
+    "react-native": "0.79.2",
     "react-native-dotenv": "^3.4.11",
     "react-native-toast-message": "^2.3.0"
   },
