--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native": "0.79.2",
     "react-native-dotenv": "^3.4.11",
     "react-native-toast-message": "^2.3.0",
-    "expo-updates": "~0.28.12"
+    "expo-updates": "~0.28.12",
+    "react-native-safe-area-context": "5.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
