--- a/app.json
+++ b/app.json
@@ -7,6 +7,7 @@
     "icon": "./assets/freshtrack.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
+    "jsEngine": "jsc",
     "splash": {
       "image": "./assets/freshtrack.png",
       "resizeMode": "contain",
@@ -42,9 +43,7 @@
         {
           "icon": "./assets/freshtrack.png",
           "color": "#ffffff",
-          "sounds": [
-            "./assets/notification-sound.wav"
-          ]
+          "sounds": ["./assets/notification-sound.wav"]
         }
       ]
     ],
